Time: 13 ms (5.14%), Space: 45.4 MB (10.26%) - LeetHub